--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
     "prepare": "husky",
-    "format": "npx @biomejs/biome format --write .",
-    "lint:fix": "npx @biomejs/biome check --write .",
+    "format": "npx @biomejs/biome format --write ./src",
+    "lint:fix": "npx @biomejs/biome check --write ./src",
     "test": "jest",
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "dayjs": "^1.11.13",
+    "js-cookie": "^3.0.5",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -26,12 +27,14 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/jest": "^29.5.14",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "styled-components": "^6.1.15",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   }
