--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "next": "15.1.7",
+    "polished": "^4.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
