--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "npx @biomejs/biome format --write ./src",
     "lint:fix": "npx @biomejs/biome check --write ./src",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "axios": "^1.7.9",
