--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.476.0",
     "next": "15.1.7",
     "polished": "^4.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.15.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
