--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "next": "15.1.7",
     "polished": "^4.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-intersection-observer": "^9.15.1"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
